@@ -1,5 +1,7 @@
 # Version 0.4.2
-- Fixed triggering validation a detail. Two new cases: has been changed Reverse option and the list has been scrolled.
+- Fixed getting correct reversed segment for single in the list curve.
+- Fixed triggering validation a detail. Two new cases: has been changed Reverse option and the list 
+has been scrolled. Fixed validation when the list conatains only curve.
 - Fixed broken path to measurements after using Save As option.
 - Tool line. Block selecting the same point twice.
 - [#443] Not valid dxf file. libdxf updated to version 3.12.2.0. Fixed drawing subpaths.
